Added JiraIssue as return type